# CreditWise

./: .gitignore  README.md
client/: package-lock.json
client/public/: index.html
client/src/: App.css  App.js
client/src/components/: BankListComponent.js  CalculatorComponent.js  GeneralCalculatorComponent.js  HeaderComponent.js  QuotePrinter.js  RequestedLoanSelector.js
client/src/compontents/: BankListComponent.js  CalculatorComponent.js  HeaderComponent.js
client/src/pages/: BankPage.js  BanksPage.js  GeneralLoanPage.js  HomePage.js
client/src/static/: bank-page.css  calculator-component.css  global.css  slider.css
server/: CMakeLists.txt  bank.cpp  bank.h  loan.cpp  loan.h  main.cpp  vcpkg.json
